--- a/src/static/menu.css
+++ b/src/static/menu.css
@@ -16,16 +16,23 @@ a{
     display: inline-block;
     text-decoration: none;
     /*___________________*/
-    background-color: #9b9b9b;
+    background-color: #009879;
     color: white;
-    border: 1px solid #cacaca;
+    border: 1px solid #056955;
     padding: 2%;
+    margin : 5px 0;
     border-radius: 4px;
     cursor: pointer;
     transition: background-color 0.3s;
 }
+a:hover{
+    background-color: #05745d;
+    border: 1px solid #075545;
+}
 table{
     width: 50%;
     margin: 5% 20%;
-    background-color: #cacaca;
+    background-color: #00000042;
+    box-shadow: 0 0 20px #00000026;
+    border-radius: 5px;
 }
